// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTile Snapshots CardTile default snapshot 1`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--surface shape--rounded type--card"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots extra props CardTile DOM props (id, className) snapshot 1`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--surface shape--rounded type--card classname classname"
    id="id"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots prop: disabled CardTile Disabled snapshot 1`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="true"
    class="c0 c1 color--surface shape--rounded type--card disabled"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots prop: variant CardTile color snapshot 1`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--default shape--rounded type--card"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots prop: variant CardTile color snapshot 2`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--subdued shape--rounded type--card"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots themes CardTile  theme snapshot 1`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,0%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,84%,45%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(0,0%,96%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--surface shape--rounded type--card"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;

exports[`CardTile Snapshots themes CardTile  theme snapshot 2`] = `
<DocumentFragment>
  .c1 {
  display: inline-block;
  position: relative;
  min-width: 3rem;
  min-height: 3rem;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2),0px 4px 5px rgba(0,0,0,0.14),0px 1px 10px rgba(0,0,0,0.12);
  color: hsl(0,0%,100%,.87);
}

.c1.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--rounded input + label {
  border-radius: var(--bds-border-radius-lg);
}

.c1.shape--squared {
  border-radius: 0;
}

.c1 .tile-input {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c1 .tile-input input {
  top: 0;
}

.c1 .tile-input label {
  height: 100%;
  width: 100%;
}

.c1 .tile-icon {
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c1 .tile-icon svg {
  display: block;
}

.c1 .tile-icon path {
  fill: hsl(213,73%,68%,1);
}

.c1.type--link:hover,
.c1.type--link.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--link:focus,
.c1.type--link.focus,
.c1.type--link.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--link:disabled,
.c1.type--link.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--link:disabled *,
.c1.type--link.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--link:disabled path,
.c1.type--link.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--link:disabled.color--surface,
.c1.type--link.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio:hover,
.c1.type--radio.hover {
  cursor: pointer;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive),var(--bds-shadows-shadow-03);
}

.c1.type--radio:focus,
.c1.type--radio.focus,
.c1.type--radio.interaction--focus {
  outline: none;
  border: 1px solid var(--bds-color-border-interactive);
  box-shadow: 0 0 0 2px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio:disabled,
.c1.type--radio.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--radio:disabled *,
.c1.type--radio.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--radio:disabled path,
.c1.type--radio.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--radio:disabled.color--surface,
.c1.type--radio.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.type--radio .tile-icon {
  display: none;
}

.c1.type--radio.c0.type--radio.c0.type--radio {
  background: transparent;
}

.c1.type--radio input + label {
  z-index: 0;
}

.c1.type--radio input:checked + label {
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive);
}

.c1.type--radio input:checked + label .tile-icon {
  display: inline-block;
}

.c1.type--radio input:focus + label {
  outline: none;
  box-shadow: 0 0 0 1px var(--bds-color-border-interactive), 0 0 0 3px var(--bds-color-border-default),var(--bds-shadows-shadow-03);
}

.c1.type--radio input + label:before,
.c1.type--radio input + label:after {
  display: none;
}

.c1.type--card:disabled,
.c1.type--card.disabled {
  cursor: not-allowed;
  box-shadow: none;
}

.c1.type--card:disabled *,
.c1.type--card.disabled * {
  color: var(--bds-color-text-disabled);
}

.c1.type--card:disabled path,
.c1.type--card.disabled path {
  fill: var(--bds-color-icon-disabled);
}

.c1.type--card:disabled.color--surface,
.c1.type--card.disabled.color--surface {
  border: 1px solid var(--bds-color-border-subdued);
}

.c1.color--surface {
  background-color: var(--bds-color-elevation-03);
}

.c1.color--subdued {
  background-color: hsl(222,45%,13%,1);
  background-color: var(--bds-color-surface-subdued);
}

<div
    aria-disabled="false"
    class="c0 c1 color--surface shape--rounded type--card"
    type="card"
  >
    <p>
      Hello World
    </p>
  </div>
</DocumentFragment>
`;
